test/tests/operators/to_ftp/error_upload_aborted.txt
error: FTP upload failed
  --> tests/operators/to_ftp/error_upload_aborted.tql:13:8
   |
13 | to_ftp env("FTP_UPLOAD_URL") {
   |        ^^^^^^^^^^^^^^^^^^^^^ 
   |
   = note: curl error: Failed sending data to the peer
